# chronos_dev

./: .env.example  .env.test.example  .gcloudignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.test.yml  package-lock.json  package.json  pyproject.toml
.agents/policies/: ci_agents_policy.json
.agents/registry/: roles_and_skills.yaml
.codex/: config.toml
.codex/agents/: default.toml  explorer.toml  monitor.toml  reviewer.toml  worker.toml
.githooks/: post-commit  pre-commit  pre-push
.github/workflows/: agent-ci-followup.yml  agent-pr-validation.yml  ci.yml  codex-pr-review.yml  deploy-staging.yml  nightly-e2e.yml  security.yml  weekly-performance.yml
app/: __init__.py  config.py  main.py
app/api/: contracts.py  deletion_proofs.py  dependencies.py  era_detection.py  fidelity.py  health.py  internal_workers.py  jobs.py  logs.py  manifests.py  metrics.py  ops.py  previews.py  problem_details.py  retention_settings.py  testing.py  uploads.py  users.py  version.py  webhooks.py
app/auth/: __init__.py  rbac.py  supabase_auth.py
app/billing/: __init__.py  (+4 more)
chronos.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: hybrid-command-loop.md  implementation-index.md  phase1_readiness_report.md
schemas/: era_profile_v2020-12.json
scripts/: bootstrap_phase1.sh  validate_codex_setup.sh  validate_test_traceability.py
supabase/: config.toml  seed.sql
tests/: conftest.py
web/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
(+357 files in other folders)
